--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ section{
 
 .home{
     width: 100%;
-    min-height: 90vh;
+    min-height: 80vh;
     display: grid;
     grid-template-columns: repeat(2,1fr);
     align-items: center;
@@ -101,6 +101,8 @@ section{
  max-width: 100%;
  width: 600px;
  height: auto;
+ position: relative;
+ top: 30px;
 }
 
 .home-text h1{
@@ -131,6 +133,7 @@ section{
 
     .container{
         /* width: 100%; */
+        min-height: 80vh;
         margin-top: 30px;
         display: grid;
         justify-content: center;
@@ -149,6 +152,10 @@ section{
 
     .heading h2{
        font-size: var(--h2-font);
+    }
+
+    .menu{
+        min-height: 90 vh;
     }
 
     .menu-container{
@@ -219,6 +226,53 @@ section{
     /* background: #feeee7 ; */
     padding: 20px;
     border-radius: 0.5rem;
+}
+
+
+.main{
+    display: flex;
+}
+
+footer{
+    padding: 25px;
+}
+.col{
+    width: 25%;
+}
+
+.col h4{
+    font-size: 1.2rem;
+    color: var(--text-color);
+    position: relative;
+}
+
+.col h4::before{
+    content: "";
+    width: 50px;
+    height: 2px;
+    position: absolute;
+    background-color: var(--main-color);
+    bottom: -5px;
+    left: 0;
+    margin-bottom: 4px;
+}
+.col ul li:not(last-child){
+    margin-bottom: 15px;
+}
+
+.col ul li a{
+    color: #9897a9;
+    transition: .4s;
+    display: block;
+    text-transform: capitalize;
+    font-size: 1.1rem;
+}
+
+.col ul li a:hover{
+    color: var(--main-color);
+    transform: translateX(-12px);
+    
+    
 }
 /* .contact{
     display: flex;
